# ForgeAudio

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  DOCUMENTATION.md  LICENSE  README.md  faudio.md  upstream.txt
extensions/: CustomAllocators.txt  EngineProcedure.txt  FilterWetDryMix.txt  SafeVoiceDestruction.txt
include/: ForgeAPO.h  ForgeAPOBase.h  ForgeAPOFX.h  ForgeAudio.h  ForgeAudioFX.h  forge_3d_audio.h  forge_apo.h  forge_apo_base.h  forge_apo_fx.h  forge_audio.h  forge_audio_fx.h  forge_effect.h  forge_effect_base.h  forge_effect_fx.h  forge_effects.h  forge_spatial_audio.h  sbAudio.h
include/forge/: audio.h  effect.h  effects.h  result.h  spatial_audio.h
src/: F3DAudio.c  FAPOBase.c  FAPOFX.c  FAPOFX_echo.c  FAPOFX_eq.c  FAPOFX_masteringlimiter.c  FAPOFX_reverb.c  FAudio.c  FAudioFX_reverb.c  FAudioFX_volumemeter.c  FAudio_internal.c  FAudio_internal.h  FAudio_internal_simd.c  FAudio_operationset.c  FAudio_platform_sdl2.c  FAudio_platform_sdl3.c  FAudio_platform_win32.c  XNA_Song.c  audio.c  audio_batch.c  audio_internal.c  audio_internal.h  audio_simd.c  batch_internal.h  biquad.c  common_internal.h  compressor.c  core_internal.h  debug.c  debug_internal.h  decode.c  delay.c  dump_internal.h  effect_base.c  effect_base_internal.h  effect_internal.h  engine.c  forge_apo_base.c  forge_apo_fx.c  forge_apo_fx_echo.c  (+43 more)
tests/: audio_render_harness.c  audio_render_harness.h  effect_chain_scratch.c  engine_render.c  engine_render_biquad.c  engine_render_channel.c  engine_render_common.c  engine_render_compressor.c  engine_render_core.c  engine_render_delay.c  engine_render_fade_stop.c  engine_render_filter.c  engine_render_gain.c  engine_render_limiter.c  engine_render_output_matrix.c  engine_render_reverb.c  engine_render_tests.h  engine_render_volume.c  source_format.c  source_resampler.c  spatial_audio.c  submix_resampler.c
utils/showriffheader/: showriffheader.cpp
utils/testfilter/: audio_faudio.cpp
utils/testreverb/: audio.cpp  audio_faudio.cpp
utils/testvolumemeter/: audio_faudio.cpp
utils/testxwma/: testxwma.cpp
utils/voicepool/: voicepool.cpp
